# deep-learning-framework

./: CMakeLists.txt
include/: activation-functions.h  convolutional-neural-network.h  neural-network.h  weight-initilization-functions.h
source/: CMakeLists.txt  activation-functions.c  convolutional-neural-network.c  neural-network.c  weight-initilization-functions.c
test/: CMakeLists.txt  convolutional-neural-network.c  neural-network-test.c
